fix: resolves Nav logo sizing issue on Firefox
Removes auto value for .logo's width property. Instead, width is 8vw. Also removed height property from .logo in the Nav and Footer since the SVG seems to be scaling the heigh automatically based on the parent div's width.

--- a/src/components/Layout/Footer.module.css
+++ b/src/components/Layout/Footer.module.css
@@ -22,7 +22,6 @@
 .logo {
   fill: white;
   width: 120px;
-  height: auto;
   margin: 1.2rem 0 1rem 0;
 }
 
